# dsla

./: .gitignore  CMakeLists.txt  Makefile
inc/: bcsrmatrix.h  densematrix.h  dsla.hpp  enums.h  imatrix.h  matrixFactory.h  miscfunctions.h  settings.h  timing.h
linalg/: bcsrmatrix_linalg.cpp  densematrix_linalg.cpp
matrix/: bcsrmatrix.cpp  densematrix.cpp  matrixFactory.hpp
program/: main.cpp
utils/: CMakeLists.txt  dsla.cpp  miscfunctions.cpp  settings.cpp  timing.cpp
